# sourly-app

./: .gitignore  CMakeLists.txt  compile_commands.json
.ccls-cache/@@Users@kevinerdogan@software@sourly-app/: @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@__wctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_ctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_locale.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_nl_item.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_uint16_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_uint32_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_uint64_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_uint8_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_types@_uintmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX13.3.sdk@usr@include@_wctype.h.blob  (+711 more)
src/: main.cpp
(+12 files in other folders)
